# Ishara

./: .gitignore  CMakeLists.txt  README  README.md  configure  ishara-installer-ubuntu14.04-amd64.sh
src/: .directory  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  ishara.cpp  ishara.h  ishara.pro  ishara.pro.user.fd7d165  ishara.ui  main.cpp  res.qrc
